[gd_scene load_steps=5 format=3 uid="uid://cm2j43v0j4iiv"]

[ext_resource type="Script" path="res://scripts/battlefield/base_battlefield_3d.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/environments/elven_land/game_background_1/game_background_1.png" id="2_background"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_background"]
albedo_texture = ExtResource("2_background")
shading_mode = 0
cull_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_background"]
size = Vector2(100, 60)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5

[node name="BaseBattlefield3D" type="Node3D" groups=["battlefield"]]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1.9854228e-05, -0.51433474, 0.85758954, -0.00010282041, 0.85758954, 0.51433474, -1, -9.838943e-05, -3.5857334e-05, 21.184116, 14.277092, 0)
current = true
projection = 1
size = 35.61939

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 5, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, -1, 0)
mesh = SubResource("PlaneMesh_background")
surface_material_override/0 = SubResource("StandardMaterial3D_background")

[node name="GroundLayer" type="Node3D" parent="."]

[node name="GameplayLayer" type="Node3D" parent="."]

[node name="EffectsLayer" type="Node3D" parent="."]

[node name="PlayerSpawnMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -29)

[node name="EnemySpawnMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29)
